# todoit

./: .gitignore  .mcp.json  9223.sh  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/: README.md  (+23 more)
todoit-mcp/: .env.backup  :memory:  CHANGELOG.md  CHANGELOG_find_items_by_status.md  COMPLETION_DEMO.md  README.md  RELEASE_NOTES_v2.14.0.md  benchmark_performance.py  completion_example.py  final_cleanup.py  fix_duplicated_params.py  fix_remaining_syntax.py  fix_test_syntax.py  migrate_subtask_keys.py  pyproject.toml  requirements-test.txt  requirements.txt
todoit-mcp/core/: __init__.py  database.py  manager.py  manager.py.backup  manager_base.py  manager_dependencies.py  manager_helpers.py  manager_io.py  manager_items.py  manager_lists.py  manager_properties.py  manager_subtasks.py  manager_tags.py  models.py  security.py
todoit-mcp/dist-archive/v1.11.0/: todoit_mcp-1.11.0-py3-none-any.whl
todoit-mcp/dist-archive/v1.12.0/: todoit_mcp-1.12.0-py3-none-any.whl
todoit-mcp/dist-archive/v1.14.1/: todoit_mcp-1.13.1-py3-none-any.whl  todoit_mcp-1.14.1-py3-none-any.whl
todoit-mcp/docs/: README.md  TESTS.md  TODO.md  cli.md  database.md
todoit-mcp/interfaces/: __init__.py  cli.py  cli_modular.py  cli_original.py  mcp_server.py  mcp_tool_annotations.py
todoit-mcp/migrations/: 002_item_dependencies.sql  003_add_list_status.sql  004_subtask_key_flexibility.sql  005_remove_list_relations_and_parent_list.sql  init_db.sql
todoit-mcp/tests/: __init__.py  conftest.py  pytest.ini  test_basic.py  test_database_comprehensive.py  test_dependencies_api.py  test_dependencies_cli_working.py  test_find_subitems.py  test_helpers.py  test_integration.py  test_json_output_fix.py  test_manager_comprehensive.py  test_manager_unit.py  test_mcp_tools_fixed.py  test_mcp_tools_functional.py  test_status_synchronization.py
todoit-mcp/web/: README.md  app.py  run.py
(+163 files in other folders)
